<resources>
    <string name="app_name">Cinedix</string>
    <!-- Pantalla Main -->
    <string name="et_name">Nombre</string>
    <string name="et_password">Contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="tv_signin">¿No tienes una cuenta? Pincha aqui!</string>

    <!-- Pantalla SignUpActivity -->
    <string name="et_email">Email</string>
    <string name="et_repeatpassword">Repetir contraseña</string>
    <string name="btn_signin">Crear cuenta</string>
    <string name="btn_signIn_back">¿Ya tienes cuenta? Pincha aqui!</string>
    <string name="logo_image">logo</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_cartelera">Cartelera</string>
    <string name="title_entradas">Entradas</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_estrenos">Estrenos</string>
    <string name="title_activity_qr_code">QrCodeActivity</string>

    <!-- Pantalla Perfil -->
    <string name="old_password">Contraseña antigua</string>
    <string name="new_password">Contraseña nueva</string>
    <string name="repeat_new_password">Repetir contraseña nueva</string>
    <string name="btn_modify_profile">Modificar perfil</string>

    <!-- Pantalla BuyPeliculaActivity -->
    <string name="btn_buy_pelicula">Comprar entrada</string>

</resources>