<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_cartelera">

    <fragment
        android:id="@+id/navigation_cartelera"
        android:name="com.example.cinedix.ui.dashboardFragments.cartelera.CarteleraFragment"
        android:label="@string/title_cartelera"
        tools:layout="@layout/fragment_cartelera_list" />

    <fragment
        android:id="@+id/navigation_entrada"
        android:name="com.example.cinedix.ui.dashboardFragments.entrada.EntradaFragment"
        android:label="@string/title_entradas"
        tools:layout="@layout/fragment_entrada_list" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.cinedix.ui.dashboardFragments.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/navigation_estreno"
        android:name="com.example.cinedix.ui.dashboardFragments.estreno.EstrenoFragment"
        android:label="@string/title_estrenos"
        tools:layout="@layout/fragment_estreno_list" />
</navigation>